--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "daviddalbusco.com",
   "private": true,
-  "description": "David Dal Busco | Freelancer | Full Stack Development Web, PWA and Mobile iOS/Android | Project management | UX and IT consulting",
+  "description": "David Dal Busco - Freelancer - Full Stack Development Web, PWA and Mobile iOS/Android - Project management - UX and IT consulting",
   "version": "0.0.1",
   "author": "David Dal Busco <david@fluster.io>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/pro-light-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "gatsby": "^2.13.3",
     "gatsby-image": "^2.2.4",
     "gatsby-plugin-manifest": "^2.2.1",
