--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "David Dal Busco <david@fluster.io>",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/pro-light-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "gatsby": "^2.13.3",
