--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "prettier": "^1.18.2"
   },
   "keywords": [
-    "freelancer",
+    "freelance",
     "freelancer",
     "development",
     "full stack development",
