--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@deckdeckgo/core": "^1.0.0-beta.40",
     "@deckdeckgo/lazy-img": "^1.0.0-alpha.9",
+    "@deckdeckgo/utils": "^1.0.0-alpha.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/pro-light-svg-icons": "^5.9.0",
