--- a/package.json
+++ b/package.json
@@ -5,27 +5,28 @@
   "version": "1.1.0",
   "author": "David Dal Busco <david@fluster.io>",
   "dependencies": {
-    "@deckdeckgo/core": "^1.0.0-beta.40",
-    "@deckdeckgo/lazy-img": "^1.0.0-alpha.9",
-    "@deckdeckgo/utils": "^1.0.0-alpha.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-brands-svg-icons": "^5.9.0",
-    "@fortawesome/pro-light-svg-icons": "^5.9.0",
+    "@deckdeckgo/core": "^1.0.0-rc.1-1",
+    "@deckdeckgo/lazy-img": "^1.0.0-rc.1",
+    "@deckdeckgo/slide-title": "^1.0.0-rc.1",
+    "@deckdeckgo/utils": "^1.0.0-rc.1-2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.24",
+    "@fortawesome/free-brands-svg-icons": "^5.11.1",
+    "@fortawesome/pro-light-svg-icons": "^5.11.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "gatsby": "^2.13.3",
-    "gatsby-image": "^2.2.4",
-    "gatsby-plugin-manifest": "^2.2.1",
-    "gatsby-plugin-offline": "^2.2.0",
-    "gatsby-plugin-react-helmet": "^3.1.0",
-    "gatsby-plugin-sass": "^2.1.0",
-    "gatsby-plugin-sharp": "^2.2.2",
-    "gatsby-source-filesystem": "^2.1.2",
-    "gatsby-transformer-remark": "^2.6.0",
-    "gatsby-transformer-sharp": "^2.2.1",
+    "gatsby": "^2.15.21",
+    "gatsby-image": "^2.2.20",
+    "gatsby-plugin-manifest": "^2.2.18",
+    "gatsby-plugin-offline": "^3.0.8",
+    "gatsby-plugin-react-helmet": "^3.1.8",
+    "gatsby-plugin-sass": "^2.1.15",
+    "gatsby-plugin-sharp": "^2.2.25",
+    "gatsby-source-filesystem": "^2.1.26",
+    "gatsby-transformer-remark": "^2.6.24",
+    "gatsby-transformer-sharp": "^2.2.16",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
