feat: add Watamato
Signed-off-by: peterpeterparker <david.dalbusco@outlook.com>

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@deckdeckgo/lazy-img": "^1.0.0-rc.1",
     "@deckdeckgo/slide-title": "^1.0.0-rc.1",
     "@deckdeckgo/utils": "^1.0.0-rc.1-4",
+    "@deckdeckgo/youtube": "^1.0.0-rc.1-2",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/pro-light-svg-icons": "^5.11.2",
