--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "gatsby": "^2.18.5",
     "gatsby-image": "^2.2.34",
+    "gatsby-plugin-feed": "^2.3.27",
     "gatsby-plugin-manifest": "^2.2.30",
     "gatsby-plugin-offline": "^3.0.25",
     "gatsby-plugin-react-helmet": "^3.1.20",
