--- a/package.json
+++ b/package.json
@@ -5,32 +5,32 @@
   "version": "1.7.0",
   "author": "David Dal Busco <david@fluster.io>",
   "dependencies": {
-    "@deckdeckgo/core": "^1.0.0-rc.1-1",
+    "@deckdeckgo/core": "^1.0.0-rc.3-5",
     "@deckdeckgo/highlight-code": "^1.0.0-rc.2-1",
-    "@deckdeckgo/lazy-img": "^1.0.0-rc.1",
+    "@deckdeckgo/lazy-img": "^1.0.0-rc.3-1",
     "@deckdeckgo/slide-title": "^1.0.0-rc.1",
     "@deckdeckgo/utils": "^1.0.0-rc.1-4",
     "@deckdeckgo/youtube": "^1.0.0-rc.1-2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-brands-svg-icons": "^5.11.2",
-    "@fortawesome/pro-light-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
-    "gatsby": "^2.18.5",
-    "gatsby-image": "^2.2.34",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/pro-light-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "gatsby": "^2.19.17",
+    "gatsby-image": "^2.2.41",
     "gatsby-plugin-feed": "^2.3.27",
-    "gatsby-plugin-manifest": "^2.2.30",
-    "gatsby-plugin-offline": "^3.0.25",
-    "gatsby-plugin-react-helmet": "^3.1.20",
+    "gatsby-plugin-manifest": "^2.2.41",
+    "gatsby-plugin-offline": "^3.0.34",
+    "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sass": "^2.1.24",
-    "gatsby-plugin-sharp": "^2.3.4",
-    "gatsby-plugin-sitemap": "^2.2.24",
+    "gatsby-plugin-sass": "^2.1.28",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-plugin-sitemap": "^2.2.27",
     "gatsby-remark-highlight-code": "^1.0.0",
-    "gatsby-source-filesystem": "^2.1.39",
-    "gatsby-transformer-remark": "^2.6.38",
-    "gatsby-transformer-sharp": "^2.3.6",
-    "node-sass": "^4.13.0",
+    "gatsby-source-filesystem": "^2.1.48",
+    "gatsby-transformer-remark": "^2.6.51",
+    "gatsby-transformer-sharp": "^2.3.14",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
