--- a/package.json
+++ b/package.json
@@ -5,35 +5,35 @@
   "version": "1.7.0",
   "author": "David Dal Busco <david@fluster.io>",
   "dependencies": {
-    "@deckdeckgo/core": "^1.0.0-rc.3-5",
-    "@deckdeckgo/highlight-code": "^1.0.0-rc.3-2",
-    "@deckdeckgo/lazy-img": "^1.0.0-rc.3-2",
-    "@deckdeckgo/slide-title": "^1.0.0-rc.1",
-    "@deckdeckgo/utils": "^1.0.0-rc.1-4",
-    "@deckdeckgo/youtube": "^1.0.0-rc.1-2",
+    "@deckdeckgo/core": "^1.0.1",
+    "@deckdeckgo/highlight-code": "^1.0.0",
+    "@deckdeckgo/lazy-img": "^1.0.0",
+    "@deckdeckgo/slide-title": "^1.0.0",
+    "@deckdeckgo/utils": "^1.0.0",
+    "@deckdeckgo/youtube": "^1.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/pro-light-svg-icons": "^5.12.1",
-    "@fortawesome/react-fontawesome": "^0.1.8",
-    "gatsby": "^2.19.19",
-    "gatsby-image": "^2.2.41",
-    "gatsby-plugin-feed": "^2.3.27",
-    "gatsby-plugin-manifest": "^2.2.41",
-    "gatsby-plugin-offline": "^3.0.35",
-    "gatsby-plugin-react-helmet": "^3.1.22",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "gatsby": "^2.19.49",
+    "gatsby-image": "^2.2.45",
+    "gatsby-plugin-feed": "^2.3.29",
+    "gatsby-plugin-manifest": "^2.2.48",
+    "gatsby-plugin-offline": "^3.0.42",
+    "gatsby-plugin-react-helmet": "^3.1.24",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sass": "^2.1.29",
-    "gatsby-plugin-sharp": "^2.4.5",
-    "gatsby-plugin-sitemap": "^2.2.27",
-    "gatsby-remark-highlight-code": "^1.1.0",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-transformer-remark": "^2.6.53",
-    "gatsby-transformer-sharp": "^2.3.14",
+    "gatsby-plugin-sass": "^2.1.31",
+    "gatsby-plugin-sharp": "^2.4.13",
+    "gatsby-plugin-sitemap": "^2.2.30",
+    "gatsby-remark-highlight-code": "^1.2.0",
+    "gatsby-source-filesystem": "^2.1.57",
+    "gatsby-transformer-remark": "^2.6.59",
+    "gatsby-transformer-sharp": "^2.3.19",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
