fix: GitHub Firebase Actions breaking change
Signed-off-by: peterpeterparker <david.dalbusco@outlook.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/download-artifact@master
         with:
           name: public
+          path: public
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
