--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "daviddalbusco.com",
   "private": true,
-  "description": "David Dal Busco - Freelancer - Web, PWA and Mobile iOS/Android Development - Project management - UX and IT consulting",
+  "description": "David Dal Busco - Freelance Web Developer - Web, Progressive Web Apps and Mobile (iOS/Android) - Project management - UX and IT consulting",
   "version": "1.8.1",
   "author": "David Dal Busco <david@fluster.io>",
   "dependencies": {
