--- a/package.json
+++ b/package.json
@@ -5,40 +5,41 @@
   "version": "1.16.0",
   "author": "David Dal Busco <david@fluster.io>",
   "dependencies": {
-    "@deckdeckgo/core": "^8.1.3",
-    "@deckdeckgo/highlight-code": "^2.4.0",
+    "@deckdeckgo/core": "^8.1.6",
+    "@deckdeckgo/highlight-code": "^3.0.2",
     "@deckdeckgo/lazy-img": "^3.0.0",
-    "@deckdeckgo/slide-title": "^2.2.4",
-    "@deckdeckgo/utils": "^1.8.0",
+    "@deckdeckgo/slide-title": "^2.3.0",
+    "@deckdeckgo/utils": "^2.0.0",
     "@deckdeckgo/youtube": "^2.0.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-brands-svg-icons": "^5.15.2",
-    "@fortawesome/free-regular-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "gatsby": "^2.32.4",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-feed": "^2.13.0",
-    "gatsby-plugin-manifest": "^2.12.0",
-    "gatsby-plugin-offline": "^3.10.1",
-    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby": "^3.5.1",
+    "gatsby-image": "^3.5.0",
+    "gatsby-plugin-feed": "^3.5.0",
+    "gatsby-plugin-image": "^1.5.0",
+    "gatsby-plugin-manifest": "^3.5.0",
+    "gatsby-plugin-offline": "^4.5.1",
+    "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
-    "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sass": "^3.2.0",
-    "gatsby-plugin-sharp": "^2.14.1",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-remark-highlight-code": "^2.2.0",
-    "gatsby-source-filesystem": "^2.11.0",
-    "gatsby-transformer-remark": "^2.16.0",
-    "gatsby-transformer-sharp": "^2.12.0",
-    "node-sass": "^5.0.0",
+    "gatsby-plugin-robots-txt": "^1.6.2",
+    "gatsby-plugin-sass": "^4.5.0",
+    "gatsby-plugin-sharp": "^3.5.0",
+    "gatsby-plugin-sitemap": "^4.1.0",
+    "gatsby-remark-highlight-code": "^2.2.1",
+    "gatsby-source-filesystem": "^3.5.0",
+    "gatsby-transformer-remark": "^4.2.0",
+    "gatsby-transformer-sharp": "^3.5.0",
+    "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.2.1"
+    "prettier": "^2.3.0"
   },
   "keywords": [
     "freelance",
