chore: redo rewrite
Signed-off-by: peterpeterparker <david.dalbusco@outlook.com>

--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,12 @@
   "hosting": {
     "public": "build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
     "headers": [
       {
         "source": "icons/**/*",
