--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "build": "vite build",
     "package": "svelte-kit package",
     "preview": "vite preview",
-    "prepare": "svelte-kit sync",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint .",
@@ -24,21 +23,22 @@
   "devDependencies": {
     "@stencil/core": "^2.17.3",
     "@sveltejs/adapter-static": "^1.0.0-next.39",
-    "@sveltejs/kit": "^1.0.0-next.405",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "eslint": "^8.21.0",
+    "@sveltejs/kit": "^1.0.0-next.427",
+    "@types/remarkable": "^2.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
-    "prettier-plugin-organize-imports": "^3.0.3",
+    "prettier-plugin-organize-imports": "^3.1.0",
     "prettier-plugin-svelte": "^2.7.0",
     "pretty-quick": "^3.1.3",
     "remarkable": "^2.0.1",
-    "sass": "^1.54.3",
+    "sass": "^1.54.5",
     "svelte": "^3.49.0",
-    "svelte-check": "^2.8.0",
+    "svelte-check": "^2.8.1",
     "svelte-preprocess": "^4.10.7",
     "typescript": "^4.7.4"
   },
