--- a/package.json
+++ b/package.json
@@ -21,26 +21,26 @@
     "@deckdeckgo/utils": "^5.1.0"
   },
   "devDependencies": {
-    "@stencil/core": "^2.19.3",
-    "@sveltejs/adapter-static": "^1.0.0-next.48",
-    "@sveltejs/kit": "^1.0.0-next.563",
+    "@stencil/core": "^2.20.0",
+    "@sveltejs/adapter-static": "^1.0.0",
+    "@sveltejs/kit": "^1.0.0",
     "@types/remarkable": "^2.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
-    "eslint": "^8.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "husky": "^8.0.2",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.1",
     "prettier-plugin-organize-imports": "^3.2.1",
-    "prettier-plugin-svelte": "^2.8.1",
+    "prettier-plugin-svelte": "^2.9.0",
     "pretty-quick": "^3.1.3",
     "remarkable": "^2.0.1",
-    "sass": "^1.56.1",
-    "svelte": "^3.53.1",
-    "svelte-check": "^2.9.2",
-    "svelte-preprocess": "^4.10.7",
-    "typescript": "^4.9.3"
+    "sass": "^1.56.2",
+    "svelte": "^3.55.0",
+    "svelte-check": "^2.10.2",
+    "svelte-preprocess": "^5.0.0",
+    "typescript": "^4.9.4"
   },
   "keywords": [
     "freelance",
