build: bump dependencies

--- a/package.json
+++ b/package.json
@@ -22,29 +22,30 @@
   },
   "devDependencies": {
     "@stencil/core": "^2.20.0",
-    "@sveltejs/adapter-static": "^1.0.0",
-    "@sveltejs/kit": "^1.0.0",
+    "@sveltejs/adapter-static": "^2.0.1",
+    "@sveltejs/kit": "^1.10.0",
     "@types/remarkable": "^2.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "husky": "^8.0.2",
-    "prettier": "^2.8.1",
-    "prettier-plugin-organize-imports": "^3.2.1",
+    "husky": "^8.0.3",
+    "prettier": "^2.8.4",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-svelte": "^2.9.0",
     "pretty-quick": "^3.1.3",
     "remarkable": "^2.0.1",
-    "sass": "^1.56.2",
-    "svelte": "^3.55.0",
-    "svelte-check": "^2.10.2",
-    "svelte-preprocess": "^5.0.0",
-    "typescript": "^4.9.4"
+    "sass": "^1.58.3",
+    "svelte": "^3.55.1",
+    "svelte-check": "^3.0.4",
+    "svelte-preprocess": "^5.0.1",
+    "typescript": "^4.9.5"
   },
   "keywords": [
     "freelance",
     "freelancer",
+    "contractor",
     "development",
     "web development",
     "web",
@@ -53,9 +54,6 @@
     "Mobile",
     "iOS",
     "Android",
-    "Ionic",
-    "Stencil",
-    "StencilJS",
     "Project management",
     "UX",
     "IT",
