--- a/package.json
+++ b/package.json
@@ -22,25 +22,25 @@
   },
   "devDependencies": {
     "@stencil/core": "^2.20.0",
-    "@sveltejs/adapter-static": "^2.0.2",
-    "@sveltejs/kit": "^1.20.5",
+    "@sveltejs/adapter-static": "^2.0.3",
+    "@sveltejs/kit": "^1.22.6",
     "@types/remarkable": "^2.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-svelte": "^2.32.4",
     "husky": "^8.0.3",
-    "prettier": "^2.8.8",
-    "prettier-plugin-organize-imports": "^3.2.2",
-    "prettier-plugin-svelte": "^2.10.1",
+    "prettier": "^3.0.2",
+    "prettier-plugin-organize-imports": "^3.2.3",
+    "prettier-plugin-svelte": "^3.0.3",
     "pretty-quick": "^3.1.3",
     "remarkable": "^2.0.1",
-    "sass": "^1.63.6",
-    "svelte": "^3.59.1",
-    "svelte-check": "^3.4.4",
+    "sass": "^1.66.1",
+    "svelte": "^4.2.0",
+    "svelte-check": "^3.5.0",
     "svelte-preprocess": "^5.0.4",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.6"
   },
   "keywords": [
     "freelance",
