feat: shorten shortline

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "daviddalbusco.com",
 	"private": true,
-	"description": "David Dal Busco - Freelance Web Developer - Web, Progressive Web Apps and Mobile",
+	"description": "David Dal Busco - Freelance Web Developer",
 	"version": "2.2.0",
 	"author": "David Dal Busco <david@fluster.io>",
 	"license": "MIT",
