--- a/package.json
+++ b/package.json
@@ -21,24 +21,27 @@
 		"@deckdeckgo/utils": "^5.1.0"
 	},
 	"devDependencies": {
-		"@stencil/core": "^4.19.1",
-		"@sveltejs/adapter-static": "^3.0.2",
-		"@sveltejs/kit": "^2.5.18",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@stencil/core": "^4.22.2",
+		"@sveltejs/adapter-static": "^3.0.6",
+		"@sveltejs/kit": "^2.7.3",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/eslint": "^9.6.1",
 		"@types/remarkable": "^2.0.8",
-		"@typescript-eslint/eslint-plugin": "^7.4.0",
-		"@typescript-eslint/parser": "^7.4.0",
-		"eslint": "^8.57.0",
+		"@typescript-eslint/parser": "^8.12.2",
+		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
-		"prettier": "^3.3.2",
-		"prettier-plugin-organize-imports": "^3.2.4",
-		"prettier-plugin-svelte": "^3.2.5",
+		"eslint-plugin-svelte": "^2.46.0",
+		"globals": "^15.11.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-organize-imports": "^4.1.0",
+		"prettier-plugin-svelte": "^3.2.7",
 		"remarkable": "^2.0.1",
-		"sass": "^1.77.6",
-		"svelte": "^4.2.18",
-		"svelte-check": "^3.8.4",
-		"typescript": "^5.4.3"
+		"sass": "^1.80.5",
+		"svelte": "^5.1.9",
+		"svelte-check": "^4.0.5",
+		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.12.2",
+		"vite": "^5.4.10"
 	},
 	"keywords": [
 		"freelance",
