--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@deckdeckgo/utils": "^5.1.0"
 	},
 	"devDependencies": {
+		"@junobuild/config": "^0.1.1",
 		"@stencil/core": "^4.26.0",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.17.2",
