feat: init Juno analytics

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
 	},
 	"dependencies": {
 		"@deckdeckgo/highlight-code": "^4.4.0",
-		"@deckdeckgo/utils": "^5.1.0"
+		"@deckdeckgo/utils": "^5.1.0",
+		"@junobuild/analytics": "^0.1.2"
 	},
 	"devDependencies": {
 		"@junobuild/config": "^0.1.1",
+		"@junobuild/vite-plugin": "^0.0.19",
 		"@stencil/core": "^4.26.0",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.17.2",
