--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"postinstall": "node -e \"require('fs').cpSync('node_modules/@junobuild/analytics/dist/workers/', './static/workers', {recursive: true});\""
+		"postinstall": "node -e \"require('fs').cpSync('node_modules/@junobuild/analytics/dist/workers/analytics.worker.js', './static/workers/analytics.worker.js', {recursive: true});\""
 	},
 	"dependencies": {
 		"@deckdeckgo/highlight-code": "^4.4.0",
