--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@sveltejs/kit": "^2.17.2",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/eslint": "^9.6.1",
+		"@types/node": "^22.13.4",
 		"@types/remarkable": "^2.0.8",
 		"@typescript-eslint/parser": "^8.24.1",
 		"eslint": "^9.20.1",
