--- a/package.json
+++ b/package.json
@@ -72,5 +72,9 @@
 	},
 	"dependencies": {
 		"@junobuild/analytics": "^0.2.9"
+	},
+	"engines": {
+		"node": ">=24",
+		"npm": ">=11.5.1 <12.0.0"
 	}
 }
