fix: missing action

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,6 +28,8 @@ jobs:
           JUNO_TOKEN: ${{ secrets.JUNO_TOKEN }}
 
       - name: Upload static assets
-        run: juno run --src ./scripts/juno.upload.assets.ts
+        uses: junobuild/juno-action@main
+        with:
+          args: run --src ./scripts/juno.upload.assets.ts
         env:
           JUNO_TOKEN: ${{ secrets.JUNO_TOKEN }}
