--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"devDependencies": {
 		"@junobuild/config": "^2.7.0",
+		"@junobuild/core": "^3.3.1",
 		"@junobuild/vite-plugin": "^4.4.0",
 		"@sveltejs/adapter-static": "^3.0.10",
 		"@sveltejs/kit": "^2.49.0",
