--- a/package.json
+++ b/package.json
@@ -18,30 +18,31 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@junobuild/config": "^2.9.0",
-		"@junobuild/core": "^3.4.1",
-		"@junobuild/vite-plugin": "^4.5.1",
+		"@eslint/js": "^10.0.1",
+		"@junobuild/config": "^2.11.0",
+		"@junobuild/core": "^5.2.0",
+		"@junobuild/vite-plugin": "^4.7.0",
 		"@sveltejs/adapter-static": "^3.0.10",
-		"@sveltejs/kit": "^2.49.5",
+		"@sveltejs/kit": "^2.52.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"@types/eslint": "^9.6.1",
-		"@types/node": "^24.10.1",
+		"@types/node": "^25.3.0",
 		"@types/remarkable": "^2.0.8",
-		"@typescript-eslint/parser": "^8.53.0",
-		"eslint": "^9.39.2",
+		"@typescript-eslint/parser": "^8.56.0",
+		"eslint": "^10.0.0",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.14.0",
-		"globals": "^17.0.0",
-		"prettier": "^3.8.0",
+		"eslint-plugin-svelte": "^3.15.0",
+		"globals": "^17.3.0",
+		"prettier": "^3.8.1",
 		"prettier-plugin-organize-imports": "^4.3.0",
-		"prettier-plugin-svelte": "^3.4.1",
+		"prettier-plugin-svelte": "^3.5.0",
 		"remarkable": "^2.0.1",
-		"sass": "^1.97.2",
-		"shiki": "^3.21.0",
-		"svelte": "^5.46.4",
-		"svelte-check": "^4.3.5",
+		"sass": "^1.97.3",
+		"shiki": "^3.22.0",
+		"svelte": "^5.53.0",
+		"svelte-check": "^4.4.2",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.53.0",
+		"typescript-eslint": "^8.56.0",
 		"vite": "^7.3.1"
 	},
 	"keywords": [
@@ -72,7 +73,7 @@
 		"cookie": "^0.7.0"
 	},
 	"dependencies": {
-		"@junobuild/analytics": "^0.2.10"
+		"@junobuild/analytics": "^0.2.11"
 	},
 	"engines": {
 		"node": ">=24",
