--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"license": "MIT",
 	"type": "module",
 	"scripts": {
+		"assets": "bun serve.assets.ts",
 		"dev": "vite dev",
 		"build": "vite build",
 		"package": "svelte-kit package",
@@ -25,6 +26,7 @@
 		"@sveltejs/adapter-static": "^3.0.10",
 		"@sveltejs/kit": "^2.52.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
+		"@types/bun": "^1.3.9",
 		"@types/eslint": "^9.6.1",
 		"@types/node": "^25.3.0",
 		"@types/remarkable": "^2.0.8",
