--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,10 +17,11 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 24
-          registry-url: 'https://registry.npmjs.org'
+
+      - uses: pnpm/action-setup@v4
 
       - name: Install Dependencies
-        run: npm ci
+        run: pnpm i --frozen-lockfile
 
       - name: Deploy to Juno
         uses: junobuild/juno-action@main
