--- a/package.json
+++ b/package.json
@@ -77,8 +77,9 @@
 	"dependencies": {
 		"@junobuild/analytics": "^0.2.11"
 	},
+	"packageManager": "pnpm@10.30.1",
 	"engines": {
 		"node": ">=24",
-		"npm": ">=11.5.1 <12.0.0"
+		"pnpm": ">=10"
 	}
 }
