--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"@junobuild/config": "^2.11.0",
 		"@junobuild/core": "^5.2.0",
 		"@junobuild/vite-plugin": "^4.7.0",
+		"@shikijs/langs": "^3.22.0",
+		"@shikijs/themes": "^3.22.0",
 		"@sveltejs/adapter-static": "^3.0.10",
 		"@sveltejs/kit": "^2.52.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
