chore: lint:fix cmd

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
+		"lint:fix": "prettier --check . && eslint . --fix",
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
